Follow Java naming conventions